src/test/deca/context/invalid/expr_cast_int_to_void.deca
// Test of the rule (3.39) : can't cast int to void.

{
	void var1;
	int var2;
	var1 = (void)(var2);
}

// Résultat :
//# a
